using System;
namespace Pattern.Factory
{
    public class KillGoblin:Quest
    {
        public KillGoblin(){
            Name="杀死哥布林";
            SuccessRate=90;
        }
    }
}
