using System;
namespace Pattern.Factory
{
    public class SearchRing : Quest
    {

        public SearchRing(){
            Name="寻找丢失的戒指";
            SuccessRate=40;
        }
    }
}
