@startuml
title Factory class diagram
interface IQuest
interface IQuestFactory

abstract class Quest
class KillGoblin
class DeliverGoods
class SearchRing

class KillGoblinFactory
class DeliverGoodsFactory
class SearchRingFactory

Quest..|>IQuest
KillGoblin--|> Quest
DeliverGoods --|> Quest
SearchRing --|> Quest

KillGoblinFactory ..|> IQuestFactory
DeliverGoodsFactory ..|> IQuestFactory
SearchRingFactory ..|> IQuestFactory

KillGoblinFactory ..> KillGoblin
DeliverGoodsFactory ..> DeliverGoods
SearchRingFactory ..> SearchRing



@enduml

@startuml
title Static Factory Class Diagram
interface IQuest
interface IQuestFactory

abstract class Quest
class KillGoblin
class DeliverGoods

class StaticQuestFactory

Quest ..|> IQuest
StaticQuestFactory ..|> IQuestFactory

KillGoblin --|> Quest
DeliverGoods --|> Quest

StaticQuestFactory ..> KillGoblin
StaticQuestFactory ..> DeliverGoods
@enduml

@startuml
title Abastract Factory Diagram
interface IQuest
interface IQuestFactory

abstract class Quest
class KillGoblin
class DeliverGoods
class SearchRing

class KillGoblinFactory
class DeliverGoodsFactory
class SearchRingFactory

interface IEquipmentFactory{
    CreateWeapon()
    CreateItem()
}

interface IWeapon
interface IItem 

class ChangGeFactory 
class ChunYangFatory

'weapon
class Sword
class GuQin

'Item
class DaoFu
class QinOil
'quest
Quest ..|> IQuest
KillGoblin--|> Quest
DeliverGoods --|> Quest
SearchRing --|> Quest

KillGoblinFactory ..|> IQuestFactory
DeliverGoodsFactory ..|> IQuestFactory
SearchRingFactory ..|> IQuestFactory

KillGoblinFactory ..> KillGoblin
DeliverGoodsFactory ..> DeliverGoods
SearchRingFactory ..> SearchRing

'equipment
ChangGeFactory ..|> IEquipmentFactory
ChunYangFatory ..|> IEquipmentFactory


Sword ..|> IWeapon
GuQin ..|> IWeapon
DaoFu ..|> IItem
QinOil ..|> IItem

ChunYangFatory ..> Sword
ChunYangFatory ..> DaoFu

ChangGeFactory ..> GuQin
ChangGeFactory ..> QinOil

Quest --> IEquipmentFactory
Quest --> IItem
Quest --> IWeapon

KillGoblinFactory ..> IEquipmentFactory
DeliverGoodsFactory ..> IEquipmentFactory
SearchRingFactory ..> IEquipmentFactory






@enduml